- Fixed SceneManager (pages) function: isEnabled in eval expressions.
- Fixed resolving of Scenes when a Layout contains disabled Scenes after a 
  random Splitter Node.
- Fixed PlayerSceneManager gotoScene not blocking the execution as intended
  until the scene changes.
- Fixed the border in the player.
- Fixed a crash when killing running threads that are stuck in a wait.

=================
Version 1.4.4.0
=================

Fixed Bugs:
- Fixed Metronome spawning the wrong device commands in some cases.

=================
Version 1.4.3.0
=================

Fixed Bugs:
- Fixed Metronome sending invalid LinearCmd for fast BPMs.
- Implemented bounds checking on the client side for commands.
- Fixed a stack owerflow when waiting for a connector connection that is
  already attempting a connection, but runs into timeout.
- Fixed scene selecion via pre-defined Splitter nodes not working.
- Fixed Metronome device setting not working correctly.

=================
Version 1.4.2.0
=================

Fixed Bugs:
- Fixed sendLinearCmd and sendRotateCmd not working properly.
- Fixed a bug with sendLinearCmd using sending the movement in the wrong unit 
  to the device resulting in 0ms linear movements.
- Fixed generated device command snippets.
- Fixed the PlayerMetronome not stoping and interrupting devices when needed.
- Fixed pausing the player not stopping the device temporarily.
- Fixed unloading the Player not sending a stop command.

=================
Version 1.4.1.0
=================

New Features:
- A Splitter Node can have a custom transition UI via Layout (Qml) Resource.
- Metronomes can automatically emit Toy commands. Project default is to emit
  vibration commands.

Changes:
- PlayerTextBox methods showButtonPrompts & showInput take an aditional optional
  argument that denotes which storage variable the result should be written to.
- Tags objects in scripts have new getter methods: numResources & resources.